# rusty_cricket

./: Cargo.toml  README.md
src/: game.rs  main.rs  player.rs  scoreboard.rs  umpire.rs  utils.rs
src/errors/: errorhandler.rs  mod.rs
src/macros/: macros.rs
src/players/: genie.rs  human.rs  mod.rs  utils.rs
src/toss/: coin_toss.rs  mod.rs
src/utils/: macros.rs  mod.rs
