[package]
name = "hand_cricket"
version = "0.1.0"
authors = ["Srikanth"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"
termion = "1.5.5"
failure= {version ="0.1", features=["derive"]}
serde = { version = "1.0", features = ["derive"] }
ansi_term = "0.12.1"